# thinking-buildings

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  capture_snapshot.py  config.yaml  enroll.py  enroll_face.py  monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
installer/: thinking_buildings.spec
installer/linux/: AppImageBuilder.yml
installer/windows/: thinking_buildings.nsi
tests/: conftest.py  test_alerter.py  test_backends.py  test_camera_probe.py  test_capture.py  test_config.py  test_detector.py  test_display.py  test_events.py  test_face_db.py  test_face_recognizer.py  test_model_manager.py  test_server.py
thinking_buildings/: __init__.py  _version.py  alerter.py  camera_probe.py  capture.py  cli.py  config.py  detector.py  display.py  events.py  face_db.py  face_recognizer.py  logger_setup.py  model_manager.py  server.py
thinking_buildings/backends/: __init__.py  base.py  ultralytics_backend.py
